--- a/indexx.html
+++ b/indexx.html
@@ -21,21 +21,36 @@
   <div id="maincont">
     <div class="content" id="movies">
       <div id="moviesone">
-        <a target="_blank" href="https://www.youtube.com/watch?v=SUXWAEX2jlg"><img id="fightclub" src="assets/fightclub.jpg" alt="Fight Club Cover Image"></a>
+        <a target="_blank" href="https://www.youtube.com/watch?v=SUXWAEX2jlg"><img class="fightclub" src="assets/fightclub.jpg" alt="Fight Club Cover Image"></a>
       </div>
       <div id="moviesTwo">
-
+        <a target="_blank" href="https://www.youtube.com/watch?v=3ycmmJ6rxA8"><img class="fightclub" src="assets/american.jpg" alt="American Beauty Cover Image"></a>
       </div>
       <div id="moviesThree">
-
+        <a target="_blank" href="https://www.youtube.com/watch?v=yE-f1alkq9I"><img class="fightclub" src="assets/sunshine.jpg" alt="Eternan sunshine of the spotless mind Cover Image"></a>
       </div>
       <div id="moviesFour">
-
+        <a target="_blank" href="https://www.youtube.com/watch?v=zSWdZVtXT7E"><img class="fightclub" src="assets/interstellar.jpg" alt="Interstellar Cover Image"></a>
       </div>
     </div>
-    <div class="content" id="songs"></div>
+    <div class="content" id="songs">
+
+    </div>
     <div class="content" id="books"></div>
-    <div class="content" id="games"></div>
+    <div class="content" id="games">
+      <div id="gamesone">
+        <a target="_blank" href="https://www.youtube.com/watch?v=MmB9b5njVbA"><img class="fightclub" src="assets/minecraft.jpg" alt="Minecraft Cover Image"></a>
+      </div>
+      <div id="gamesTwo">
+        <a target="_blank" href="https://www.youtube.com/watch?v=yAMrjoVdFxo"><img class="fightclub" src="assets/res4.jpg" alt="Resident Evil 4 Cover Image"></a>
+      </div>
+      <div id="gamesThree">
+        <a target="_blank" href="https://www.youtube.com/watch?v=fwan7k3nOzg"><img class="fightclub" src="assets/silent.jpg" alt="Silent Hill 1 Cover Image"></a>
+      </div>
+      <div id="gamesFour">
+        <a target="_blank" href="https://www.youtube.com/watch?v=j_lr12kgGeU"><img class="fightclub" src="assets/ff6.jpg" alt="Final Fantasy Cover Image"></a>
+      </div>
+    </div>
   </div>
   <div id="topbar">
     <div id="titleofp">NANTER FRECHAT</div>
